fix: responsive layout and container overflow
The changes to the initial homepage image broke the responsiveness
of the layout. Editing the media queries by touching up the
positioning and changing the object fit rule for image helped.

There was also an issue where the header bar would move even
though it was fixed in position. To fix this I just added a rule
for overflow to main.

--- a/styles.css
+++ b/styles.css
@@ -223,6 +223,27 @@ p {
 }
 
 @media (max-width: 1000px) {
+    
+    main {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        top: 10%;
+        overflow-y: scroll;
+    }
+
+    #homepage-img-container {
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        scroll-margin-top: 270px;
+    }
+
+    #homepage-img {
+        object-fit: scale-down;
+    }
+
     #flexbox-header {
         width: 100%;
         height: 10%;
@@ -253,25 +274,11 @@ p {
         width: 100%;
     }
 
-    #homepage-img-container {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: center;
-        scroll-margin-top: 270px;
-    }
-
     #member-grid-flex-container {
         scroll-margin-top: 80px;
     }
 
     #member-grid {
         width: 100%;
-    }
-
-    main {
-        left: 0;
-        top: 50%;
-        transform: translateY(-6%);
     }
 }
